<resources>

    <string-array name="date_options_arr">
        <item>All</item>
        <item>Single</item>
        <item>Range</item>
    </string-array>

    <string-array name="branch_options_arr">
        <item>All</item>
        <item>Specific</item>
    </string-array>

    <string-array name="feedback_options_arr">
        <item>All</item>
        <item>Positive</item>
        <item>Negative</item>
    </string-array>

    <string name="app_name">EastWing Feedback Admin</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="conf_pass">Confirm New Password</string>
    <string name="new_pass">New Password</string>
    <string name="comp_name_lbl">Company Name</string>
    <string name="loading_lbl">Loading…</string>
    <string name="settings_lbl">Settings</string>
    <string name="report_lbl">Reports</string>
    <string name="logout">Logout</string>
    <string name="date_lbl">Date</string>
    <string name="start_date_lbl">Start Date</string>
    <string name="end_date_lbl">End Date</string>
    <string name="branch_lbl">Branch</string>
    <string name="feedback_lbl">Feedback</string>
    <string name="search_lbl">Search</string>
    <string name="account_lbl">Account</string>
    <string name="team_name_lbl">Team name</string>
    <string name="add_team_lbl">Add Team</string>
    <string name="team_shifts_lbl">Team Shifts</string>
    <string name="branches_list">Branches List</string>
    <string name="survey_questions_lbl">Survey Questions</string>
    <string name="update_pass_lbl">Update Password</string>
    <string name="next">Next</string>
    <string name="delete_icon">Delete icon</string>
    <string name="add_depart_lbl">Add Department</string>
    <string name="close">Close</string>
    <string name="department_question_hint">Enter Department Specific Question</string>
    <string name="save">Save</string>
    <string name="department_name_hint">Department Name</string>
    <string name="deparment_lbl">Department</string>
    <string name="menu_log_out">Log out</string>
    <string name="total_count_lbl">Total Count</string>
    <string name="pos_lbl">Positive</string>
    <string name="neg_lbl">Negative</string>
    <string name="connection_error">Please check your internet connection and try again</string>
</resources>