<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/const_frag_comp_setup"
    android:layout_height="match_parent">


    <!--Update Password Label-->
    <TextView
        android:layout_marginStart="@dimen/margin_large"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/tv_setup_update_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/update_pass_lbl"
        android:textSize="@dimen/med_text"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <!--Old password input-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_setup_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_large"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/tv_setup_update_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_setup_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--New password input-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_setup_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_large"
        android:hint="@string/new_pass"
        app:layout_constraintTop_toBottomOf="@id/input_setup_old_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_setup_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Confirm password input-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_setup_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_large"
        android:hint="@string/conf_pass"
        app:layout_constraintTop_toBottomOf="@id/input_setup_new_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_setup_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/probar_company_setup"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/bt_company_setup_next"
        app:layout_constraintLeft_toLeftOf="@id/tv_setup_update_password"
        app:layout_constraintRight_toRightOf="@id/input_setup_old_password"
        app:layout_constraintTop_toBottomOf="@id/input_setup_confirm_password" />

    <Button
        style="@style/App_Button_Style"
        android:id="@+id/bt_company_setup_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_large"
        android:text="@string/next"
        android:textSize="@dimen/med_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/tv_setup_update_password"
        app:layout_constraintRight_toRightOf="@id/input_setup_old_password" />

</androidx.constraintlayout.widget.ConstraintLayout>