<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_department_setup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:hint="@string/department_name_hint"
        app:layout_constraintBottom_toTopOf="@id/bt_department_setup_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_department_setup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_department_setup_save"
        style="@style/App_Button_Style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:backgroundTint="#2E7D32"
        android:text="@string/save"
        android:textSize="@dimen/med_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bt_department_setup_close"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_department_setup_close"
        style="@style/App_Button_Style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_small"
        android:backgroundTint="#AD1457"
        android:text="@string/close"
        android:textSize="@dimen/med_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bt_department_setup_save" />

</androidx.constraintlayout.widget.ConstraintLayout>