<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/const_login"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:scaleType="centerInside"
        android:src="@drawable/feedback_logo"
        app:layout_constraintBottom_toTopOf="@id/input_login_email"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/tv_divider"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_login_email"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tv_divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textSize="@dimen/normal_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_login_password"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_tiny"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_login_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="@dimen/normal_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/probar_login"
        android:indeterminate="true"
        android:layout_marginBottom="@dimen/margin_tiny"
        app:layout_constraintBottom_toTopOf="@id/input_login_email"
        app:layout_constraintRight_toRightOf="@id/input_login_password"
        app:layout_constraintLeft_toLeftOf="@id/input_login_password"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="LoginAction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        style="@style/App_Button_Style"
        android:text="@string/login"
        app:layout_constraintLeft_toLeftOf="@id/input_login_password"
        app:layout_constraintRight_toRightOf="@id/input_login_password"
        app:layout_constraintTop_toBottomOf="@id/input_login_password" />

</androidx.constraintlayout.widget.ConstraintLayout>