<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Company name Label-->
    <TextView
        android:id="@+id/tv_setup_company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/comp_name_lbl"
        android:textSize="@dimen/med_text"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/input_setup_department_company_name"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Company name input-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_setup_department_company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_large"
        android:hint="@string/comp_name_lbl"
        app:layout_constraintTop_toBottomOf="@id/tv_setup_company_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_setup_department_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_department_setup_add"
        style="@style/App_Button_Style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        android:backgroundTint="@color/black"
        android:text="@string/add_depart_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_setup_department_company_name"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_departments_setup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_small"
        app:layout_constraintBottom_toTopOf="@id/bt_department_setup_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_department_setup_add"
        />

    <Button
        android:id="@+id/bt_department_setup_next"
        style="@style/App_Button_Style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        android:text="@string/next"
        android:textSize="@dimen/med_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>