<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DashBoard">

    <FrameLayout
        android:id="@+id/frame_dashboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_company_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/margin_small"
        app:cardElevation="@dimen/margin_tiny"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/report_design_back"
            android:orientation="vertical"
            android:padding="@dimen/margin_tiny">

            <!--Total count row-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_sum_total_count_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/margin_tiny"
                    android:text="@string/total_count_lbl"
                    android:textColor="@color/white"
                    android:textSize="@dimen/med_text"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/tv_sum_total_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_tiny"
                    android:layout_weight="1"
                    android:padding="@dimen/margin_tiny"
                    android:paddingStart="@dimen/margin_large"
                    android:paddingEnd="@dimen/margin_tiny"
                    android:text="5000"
                    android:textColor="@color/white"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_tiny"
                    android:layout_weight="1"
                    android:padding="@dimen/margin_tiny"
                    android:paddingStart="@dimen/margin_large"
                    android:paddingEnd="@dimen/margin_tiny"
                    android:textColor="@color/white"
                    android:textStyle="italic" />

            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/white" />

            <!--Positive count row-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_sum_good_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/med_text"
                    android:padding="@dimen/margin_tiny"
                    android:text="@string/pos_lbl"
                    android:textColor="@color/white"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/tv_sum_total_good"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_tiny"
                    android:layout_weight="1"
                    android:padding="@dimen/margin_tiny"
                    android:paddingStart="@dimen/margin_large"
                    android:paddingEnd="@dimen/margin_tiny"
                    android:text="2000"
                    android:textColor="@color/white"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/tv_sum_total_good_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_tiny"
                    android:layout_weight="1"
                    android:padding="@dimen/margin_tiny"
                    android:text="30%"
                    android:textColor="@color/white"
                    android:textStyle="italic" />

            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/white" />

            <!--Negative count row-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="@dimen/med_text"
                    android:id="@+id/tv_sum_bad_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/margin_tiny"
                    android:text="@string/neg_lbl"
                    android:textColor="@color/white"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/tv_sum_total_bad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_tiny"
                    android:layout_weight="1"
                    android:padding="@dimen/margin_tiny"
                    android:paddingStart="@dimen/margin_large"
                    android:paddingEnd="@dimen/margin_tiny"
                    android:text="3000"
                    android:textColor="@color/white"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/tv_sum_total_bad_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_tiny"
                    android:layout_weight="1"
                    android:padding="@dimen/margin_tiny"
                    android:text="50%"
                    android:textColor="@color/white"
                    android:textStyle="italic" />

            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="@dimen/margin_tiny"
                android:background="@color/white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_feedback_summary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_company_summary" />

</androidx.constraintlayout.widget.ConstraintLayout>